[workspace]
resolver = "2"
members = [
    "aoc",
    "day-01",
    "day-02",
    "day-03",
    "day-04",
    "day-05",
    "day-06",
    "day-07",
    "day-08",
    "day-09",
    "day-10",
    "day-11",
    "day-12",
]

[workspace.package]
version = "0.1.0"
authors = ["Alex Hudspith"]
edition = "2021"
repository = "https://github.com/alexhudspith/advent-of-code-2023"

[workspace.dependencies]
anyhow = "1.0.75"
derive_builder = "0.12.0"
indoc = "2.0.4"
itertools = "0.12.0"
regex = "1.10.2"
nom = "7.1.3"
num = "0.4.1"
enumset = "1.1.3"
fxhash = "0.2.1"
