[workspace]
resolver = "2"
members = [
    "aoc",
    "day-01",
    "day-02",
    "day-03",
    "day-04",
    "day-05",
    "day-06",
    "day-07",
    "day-08",
    "day-09",
    "day-10",
    "day-11",
    "day-12",
    "day-13",
    "day-14",
    "day-15",
    "day-16",
    "day-17",
    "day-18",
    "day-19",
    "day-20",
    "day-21",
    "day-22",
    "day-23",
    "day-24",
    "day-25",
]

[workspace.package]
version = "0.1.0"
authors = ["Alex Hudspith"]
edition = "2021"
repository = "https://github.com/alexhudspith/advent-of-code-2023"

[workspace.dependencies]
anyhow = "1.0.75"
derive_builder = "0.12.0"
enumset = "1.1.3"
fxhash = "0.2.1"
fibonacii-heap = "0.1.2"
indoc = "2.0.4"
indexmap = "2.1.0"
itertools = "0.12.0"
regex = "1.10.2"
rand = "0.8.5"
rayon = "1.8.0"
nom = "7.1.3"
num = "0.4.1"
petgraph = "0.6.4"
z3 = "0.12.1"
z3-sys = "0.8.1"

[profile.release]
lto = true
