[package]
name = "aoc"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
itertools = { workspace = true }
nom = { workspace = true, optional = true }
enumset = { workspace = true }

[features]
default = []
nom = ["dep:nom"]
