[package]
name = "day-01"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc = { path = "../aoc" }
regex = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
