[package]
name = "day-02"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "day_02"
doctest = false

[dependencies]
aoc = { path = "../aoc", features = ["nom"] }
derive_builder = { workspace = true }
nom = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
