[package]
name = "day-03"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { workspace = true }
derive_builder = { workspace = true }
anyhow = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
