[package]
name = "day-13"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc = { path = "../aoc" }
itertools = { workspace = true, features = [] }
fxhash = { workspace = true }
enumset = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
