[package]
name = "day-19"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "day_19"
doctest = false

[dependencies]
aoc = { path = "../aoc" }
itertools = { workspace = true, features = [] }

[dev-dependencies]
indoc = { workspace = true }
