[package]
name = "day-23"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "day_23"
doctest = false

[dependencies]
aoc = { path = "../aoc" }
itertools = { workspace = true, features = [] }
indexmap = { workspace = true }
fxhash = { workspace = true }
petgraph = { workspace = true }
num = { workspace = true, features = [] }

[dev-dependencies]
indoc = { workspace = true }
