[package]
name = "day-25"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc = { path = "../aoc" }
itertools = { workspace = true, features = [] }
petgraph = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
